# order/docs/swagger.yaml
@@ -1,4 +1,51 @@
 basePath: /
+definitions:
+  app.OrderConfirmResponseDTO:
+    properties:
+      order_id:
+        type: string
+      reward_points:
+        type: integer
+      shipping_price:
+        type: integer
+      status:
+        type: string
+      total_cost:
+        type: integer
+      user_id:
+        type: string
+    type: object
+  app.OrderRecordDTO:
+    properties:
+      order_id:
+        type: string
+      products:
+        items:
+          $ref: '#/definitions/app.ProductRecordDTO'
+        type: array
+      status:
+        type: string
+      total_cost:
+        type: integer
+      user_id:
+        type: string
+    type: object
+  app.ProductRecordDTO:
+    properties:
+      cost:
+        type: integer
+      name:
+        type: string
+      quantity:
+        type: integer
+    type: object
+  app.RequestDTO:
+    properties:
+      id:
+        type: string
+      status:
+        type: string
+    type: object
 host: localhost:7000
 info:
   contact:
@@ -33,14 +80,20 @@ paths:
   /order:
     post:
       description: This Handle allows admin to create new Order
+      parameters:
+      - description: Create order
+        in: body
+        name: order
+        required: true
+        schema:
+          $ref: '#/definitions/app.OrderRecordDTO'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            additionalProperties: true
-            type: object
+            $ref: '#/definitions/app.OrderConfirmResponseDTO'
         "400":
           description: Bad Request
           schema:
@@ -49,6 +102,22 @@ paths:
       tags:
       - Order
   /order/:id:
+    delete:
+      description: This Handle deletes order given order id
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: number
+        "400":
+          description: Bad Request
+          schema:
+            type: number
+      summary: Delete order
+      tags:
+      - Order
     get:
       description: This Handle returns Order given order id
       produces:
@@ -57,13 +126,36 @@ paths:
         "200":
           description: OK
           schema:
-            additionalProperties: true
-            type: object
+            $ref: '#/definitions/app.OrderRecordDTO'
         "400":
           description: Bad Request
           schema:
             type: number
       summary: Get Order by id
+      tags:
+      - Order
+  /order/status:
+    put:
+      description: This Handle Update order status given order id
+      parameters:
+      - description: Update order
+        in: body
+        name: order
+        required: true
+        schema:
+          $ref: '#/definitions/app.RequestDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: number
+        "400":
+          description: Bad Request
+          schema:
+            type: number
+      summary: Update order status
       tags:
       - Order
   /order/status/:status:
@@ -75,8 +167,9 @@ paths:
         "200":
           description: OK
           schema:
-            additionalProperties: true
-            type: object
+            items:
+              $ref: '#/definitions/app.OrderRecordDTO'
+            type: array
         "400":
           description: Bad Request
           schema:
@@ -93,8 +186,9 @@ paths:
         "200":
           description: OK
           schema:
-            additionalProperties: true
-            type: object
+            items:
+              $ref: '#/definitions/app.OrderRecordDTO'
+            type: array
         "400":
           description: Bad Request
           schema:
@@ -103,23 +197,6 @@ paths:
       tags:
       - Order
   /orders:
-    delete:
-      description: This Handle deletes order given order id
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            type: number
-      summary: Delete order
-      tags:
-      - Order
     get:
       description: This Handle returns all of the orders
       produces:
@@ -128,30 +205,14 @@ paths:
         "200":
           description: OK
           schema:
-            additionalProperties: true
-            type: object
+            items:
+              $ref: '#/definitions/app.OrderRecordDTO'
+            type: array
         "400":
           description: Bad Request
           schema:
             type: number
       summary: Get All Order records
-      tags:
-      - Order
-    put:
-      description: This Handle Update order status given order id
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            type: number
-      summary: Update order status
       tags:
       - Order
 schemes:
